# socket_extension_relay_controller

./: .gitignore  CMakeLists.txt  README.md
cmake/: rc-config.cmake
doc/: wiring_diagram.dia
relay_control/: CMakeLists.txt
relay_control/lib/: CMakeLists.txt
relay_control/lib/include/rc/: relay.h
relay_control/lib/src/: relay.c
relay_control/tool/: CMakeLists.txt
relay_control/tool/src/: main.c
